<resources>
    <string name="app_name">SCP</string>

    <string name="hint_usuario">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="bt_iniciar">Iniciar</string>
    <string name="msg_descargando">Descargando</string>
    <string name="msg_rellenaCampos">Rellena todos los campos</string>
    <string name="msg_errorWs">Error al conectar con el WebService</string>
    <string name="contentDes">Image</string>
    <string name="ejemplo">Ejemplo</string>
    <string name="tv_caja">Caja</string>
    <string name="bt_guardar">Guardar</string>
    <string name="bt_escanear">Escanear</string>
    <string name="bt_actualizar">Actualizar</string>
    <string name="tv_transaccion">Ticket</string>
    <string name="tv_importe">Importe</string>
    <string name="title_revisar">Revisar</string>
    <string name="err_ticket">Error al actualizar los tickets</string>
    <string name="err_artAlerta">Error al listar artículos en alerta</string>
    <string name="err_toolbar">Error al mostrar toolbar</string>
    <string name="hint_codigo">Código</string>
    <string name="err_noEncontrado">Código del artículo no encontrado</string>
    <string name="err_base">Error al crear base de datos local</string>
    <string name="err_ticketFil">Error al filtrar tickets</string>
    <string name="msg_importante">Importante</string>
    <string name="msg_salir">¿Seguro que deseas cerrar sesión?</string>
    <string name="msg_si">Si</string>
    <string name="msg_no">Cancelar</string>
    <string name="err_salirEscanear">Para salir debes guardar el escaneo de artículos</string>
    <string name="err_guardarLoc">Error al guardar ticket en local</string>
    <string name="msg_correcto">Información actualizada correctamente.</string>
    <string name="msg_escanearMas">Escanea más artículos para poder continuar.</string>
    <string name="msg_marcarEscaneado">¿Marcar artículo como revisado?</string>
    <string name="tv_hora">Hora</string>
    <string name="bt_regresar">Regresar al listado</string>
    <string name="msg_noC">No</string>
    <string name="msg_coincide">¿Coincide la cantidad de artículos?</string>
    <string name="err_actItem">Error al actualizar item</string>
    <string name="err_compararCod">Error al comparar codigo de barras</string>
    <string name="err_verificarCod">Error al verificar codigo</string>
    <string name="err_guardarWs">Error al guardar ticket en el ws</string>
    <string name="err_verificanCoin">Error al validar cantidad de artículos</string>
    <string name="err_validarTiem">Error al validar tiempo de tickets</string>
    <string name="err_guardarBase">Error al guardar base de datos de codigos</string>
    <string name="msg_escanear">Este artículo debe ser escaneado</string>
    <string name="hint_host">Host</string>
    <string name="bt_probar">Prueba de comunicación</string>
    <string name="msg_hostValido">Ingresa un host valido</string>
    <string name="msg_realizaPrueba">Antes de guardar debes realizar una prueba de comunicación con el servidor</string>
    <string name="msg_pruebaExitosa">Prueba exitosa</string>
    <string name="msg_cancelarLectura">¿Seguro que deseas cancelar el escaneo de artículos?</string>
    <string name="err_noEncontradoEnTicket">Artículo no encontrado en el ticket</string>
    <string name="err_addItem">Error al agregar artículo no listado</string>
    <string name="msg_errGuardar">Error al intentar guardar la información</string>
    <string name="tv_version">Versión</string>
    <string name="msg_cerrarApp">¿Seguro que desea finalizar la aplicación?</string>
    <string name="msg_errorGuardar">Error al guardar escaneo.</string>
</resources>