<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfiguracionActivity"
    android:background="@drawable/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/logo_etiquetas"
                android:contentDescription="@string/contentDes"
                android:padding="@dimen/paddingLogin"
                android:layout_margin="@dimen/paddingLogin"
                >
            </ImageView>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/paddingLogin"
                android:gravity="center"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_host"
                    app:startIconDrawable="@drawable/ic_antena"
                    android:paddingBottom="@dimen/paddingControles"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_host"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize"
                        android:imeOptions="actionDone"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/bt_prueba"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_probar"
                    android:theme="@style/ButtonDark"
                    app:icon="@drawable/ic_communication"
                    />

                <Button
                    android:id="@+id/bt_guardar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_guardar"
                    android:theme="@style/ButtonDark"
                    app:icon="@drawable/ic_save"
                    />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/paddingGeneral"
                    android:textColor="@color/grayText"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/textCodigo"
                    >
                </TextView>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        android:theme="@style/ProgressRed"
        android:padding="150dp"
        android:background="@color/transparent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>